Prevented overflow

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -16,6 +16,8 @@ body{
     flex-direction: column;
     background-color: white;
     letter-spacing: 1px;
+	max-width: 100%;
+	overflow-x: hidden;
 }
 .nav-logo{
 font-family: 'Arvo', serif;
